--- a/index.html
+++ b/index.html
@@ -13,7 +13,23 @@
     
     <div id="app">
 
-        
+        <div class="container">
+            <div class="row align-items-center vh-100">
+                <div class="col d-flex justify-content-center">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">To do List</h5>
+                            <ul>
+                                <li v-for="item in listItems"
+                                    :class="item.done === true ? 'text-decoration-line-through' : '' " class="list-item">
+                                    {{item.text}}
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>    
+        </div>
 
     </div>
 
