--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>To do list</title>
 </head>
@@ -23,6 +24,7 @@
                                 <li v-for="item in listItems"
                                     :class="item.done === true ? 'text-decoration-line-through' : '' " class="list-item">
                                     {{item.text}}
+                                    <i class="fa-solid fa-trash" @click="delate"></i>
                                 </li>
                             </ul>
                         </div>
