--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                                     <i class="fa-solid fa-trash" @click="delateItem"></i>
                                 </li>
                                 <div class="input-group mb-3 pt-3">
-                                    <input type="text" class="form-control" placeholder="Inserisci un elemento" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                    <input type="text" v-model="newText" class="form-control" placeholder="Inserisci un elemento" aria-label="Recipient's username" aria-describedby="basic-addon2">
                                     <div class="input-group-append">
-                                        <button class="btn btn-outline-secondary" type="button" @click="addItem">Inserisci</button>
+                                        <button class="btn btn-outline-secondary" type="button" @click="pushItem">Inserisci</button>
                                     </div>
                                 </div>
                             </ul>
